--- a/dsq/Dockerfile
+++ b/dsq/Dockerfile
@@ -14,6 +14,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& apk add --no-cache git gcc musl-dev \ 
 	&& git clone --depth 1 ${GIT_URL} --branch ${BUILD_VERSION} /go/src/github.com/multiprocessio/dsq \
 	&& cd /go/src/github.com/multiprocessio/dsq \
+	&& go get -u golang.org/x/net \
 	&& go build -v -trimpath -buildmode=pie -ldflags="-s -w"
 
 WORKDIR /config
