--- a/driftctl/Dockerfile
+++ b/driftctl/Dockerfile
@@ -14,6 +14,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/driftctl.tar.gz \
 	&& tar xzf /tmp/driftctl.tar.gz --strip 1 -C /go/src/github.com/cloudskiff/driftctl \
+	&& go get -u golang.org/x/net \
 	&& go build -v -trimpath -ldflags="-s -w -X github.com/cloudskiff/driftctl/pkg/version.version=${BUILD_VERSION}" . 
 
 WORKDIR /config
